# se-toolkit-lab-8

./: .env.docker.example  Dockerfile  README.md  REPORT.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json
backend/: .env.tests.unit.example  Dockerfile  pyproject.toml
backend/app/: auth.py  main.py  run.py
backend/app/db/: items.py
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
client-web-flutter/: Dockerfile
contributing/conventions/git/: commits.md
instructors/: lab-plan.md
lab/setup/: setup-simple.md
lab/tasks/required/: task-1.md  task-2.md  task-3.md  task-4.md  task-5.md
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
otel-collector/: config.yaml
wiki/: bot.md  docker.md  gateway.md  qwen-code-api.md
